--- a/css/text_format.html
+++ b/css/text_format.html
@@ -84,7 +84,7 @@
     <h1 class="t_d_over">Hello Pratik</h1>
     <h1 class="t_center">Hello Pratik</h1>
     <h1 class="t_upper">hello vivek</h1>
-    <h1 class="t_lower">hello kisor</h1>
+    <h1 class="t_lower">hello kishor</h1>
     <h1 class="t_caitalize">hello sejal</h1>
     
     
